apigee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigee
  labels:
    app: apigee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigee
  template:
    metadata:
      labels:
        app: apigee
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:contrib-dev
        volumeMounts:
        - mountPath: /etc/config
          name: envoy-config
        args:
        - "-c"
        - "/etc/config/config-envoy.local.yaml"
        - "-l"
        - "debug"
        ports:
        - containerPort: 10000
      - name: apigee-envoy-adapter
        image: google/apigee-envoy-adapter:v2.1.4
        args:
        - "-c"
        - "/etc/config/config-apigee.local.yaml"
        env:
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /etc/config/application_default_credentials.json
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/config
      volumes:
        - name: envoy-config
          secret:
            secretName: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: LoadBalancer
  selector:
    app: apigee
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 10000

---
apiVersion: v1
kind: Service
metadata:
  name: apigee-adapter
spec:
  type: NodePort
  selector:
    app: apigee
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
